<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_Devices" Id="{5218a143-2eb9-4336-8a4d-04004f4dd216}">
    <Declaration><![CDATA[VAR_GLOBAL
	
	(*Upstream Interface*)
	(*Gauges*)
	USG_GCC: FB_Gauge_Interface;
	DSG_GCC: FB_Gauge_Interface;
	(*Valves*)
	DSV_VGC: FB_Valve_Interface;
	
	
	(*Gauges*)
	(*EM1L0*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GCC:10 '}
	GEM1_GCC_10 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:10 '}
	GEM1_GPI_10 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GCC:20 '}
	GEM1_GCC_20 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:20 '}
	GEM1_GPI_20 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GCC:30 '}
	GEM1_GCC_30 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:30 '}
	GEM1_GPI_30 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GCC:50 '}
	GEM1_GCC_50 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:50 '}
	GEM1_GPI_50 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:11 '}
	GEM1_GPI_11 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:31 '}
	GEM1_GPI_31 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:51 '}
	GEM1_GPI_51 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:60 '}
	GEM1_GPI_60 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:61 '}
	GEM1_GPI_61 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GPI:71 '}
	GEM1_GPI_71 : FB_MKS275;
	(*AT1L0*)
	{attribute 'pytmc' :=' pv: AT1L0:GAS:GPI:10 '}
	GATT_GPI_10 : FB_MKS317;
	(*EM2L0*)
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:10 '}
	GEM2_GPI_10 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:11 '}
	GEM2_GPI_11 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:21 '}
	GEM2_GPI_21 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GCC:30 '}
	GEM2_GCC_30 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:30 '}
	GEM2_GPI_30 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:31 '}
	GEM2_GPI_31 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GCC:50 '}
	GEM2_GCC_50 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:50 '}
	GEM2_GPI_50 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:51 '}
	GEM2_GPI_51 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GCC:60 '}
	GEM2_GCC_60 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:60 '}
	GEM2_GPI_60 : FB_MKS317;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:61 '}
	GEM2_GPI_61 : FB_MKS275;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GCC:70 '}
	GEM2_GCC_70 : FB_MKS422;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GPI:70 '}
	GEM2_GPI_70 : FB_MKS317;
	(* GAS Cell CM*)
	{attribute 'pytmc' :=' pv: AT1L0:GAS:GBA:311 '}
	GATT_GBA_10 : FB_GCM;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:GMP:311 '}
	GATT_GMP_10 : FB_GCM;
	(*GEM Gauges*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GBA:41 '}
	GEM1_GBA_41 : FB_GCM;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:GBA:42 '}
	GEM1_GBA_42 : FB_GCM;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GBA:41 '}
	GEM2_GBA_41 : FB_GCM;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:GBA:42 '}
	GEM2_GBA_42 : FB_GCM;

	(*Differential Pumping section*)
	(*valves*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VGC:10 '}
	GEM1_VGC_10: FB_VRC;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VGC:20 '}
	GEM1_VGC_20: FB_VRC;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VGC:30 '}
	GEM1_VGC_30: FB_VRC;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VGC:40 '}
	GEM1_VGC_40: FB_VRC;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VGC:50 '}
	GEM1_VGC_50: FB_VRC;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VGC:60 '}
	GEM1_VGC_60: FB_VRC;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VGC:70 '}
	GEM1_VGC_70: FB_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VGC:10 '}
	GEM2_VGC_10: FB_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VGC:20'}
	GEM2_VGC_20: FB_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VGC:30 '}
	GEM2_VGC_30: FB_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VGC:40 '}
	GEM2_VGC_40: FB_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VGC:50 '}
	GEM2_VGC_50: FB_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VGC:60 '}
	GEM2_VGC_60: FB_VRC;
	(*Turbo isolation valves*)
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:10 '}
	GEM1_VRC_10: FB_VRC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:20 '}
	GEM1_VRC_20: FB_VRC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:30 '}
	GEM1_VRC_30: FB_VRC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:50 '}
	GEM1_VRC_50: FB_VRC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:30 '}
	GEM2_VRC_30: FB_VRC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:50 '}
	GEM2_VRC_50: FB_VRC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:60 '}
	GEM2_VRC_60: FB_VRC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VRC:70 '}
	GEM2_VRC_70: FB_VRC;
	(*Kashiyama Valves*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VRC:60 '}
	GEM1_VRC_60:FB_Kashiyama_VRC;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VRC:70 '}
	GEM1_VRC_70:FB_Kashiyama_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VRC:10 '}
	GEM2_VRC_10:FB_Kashiyama_VRC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VRC:20 '}
	GEM2_VRC_20:FB_Kashiyama_VRC;
	(*Turbo vent valves*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VVC:20 '}
	GEM1_VVC_20: FB_TurbVentvalve_NO;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VVC:30 '}
	GEM1_VVC_30: FB_TurbVentvalve_NO;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VVC:50 '}
	GEM1_VVC_50: FB_TurbVentvalve_NO;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VVC:30 '}
	GEM2_VVC_30: FB_TurbVentvalve_NO;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VVC:50 '}
	GEM2_VVC_50: FB_TurbVentvalve_NO;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VVC:70 '}
	GEM2_VVC_70: FB_TurbVentvalve_NO;
	
	(*Gas cell vent valve*)
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VVC:311 '}
	VVRC_311 : FB_VRC;
	(* GAS cell needle valve*)
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VCN:10 '}
	GATT_VCN_10 : FB_VCN;
	(* N2 cutt off valve *)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VVC:40'}
	GEM1_VVC_40: FB_VCC;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:VVC:10 '}
	GATT_VVC_10: FB_VCC;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VVC:40 '}
	GEM2_VVC_40: FB_VCC;
	(*Pressure Control Valve*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VPC:41 '}
	GEM1_VPC_41 : FB_MKS248;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:VPC:42 '}
	GEM1_VPC_42 : FB_MKS248;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VPC:41 '}
	GEM2_VPC_41 : FB_MKS248;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VPC:42 '}
	GEM2_VPC_42 : FB_MKS248;
	
	
	
	
	{attribute 'pytmc' :=' pv: EM2L0:GEM:VGC:70 '}
	GEM2_VGC_70: FB_VGC;
	
	(*Pumps*)
	(*Turbo*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PTM:10 '}
	GEM1_PTM_10 : FB_PTM_Agilent;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PTM:20 '}
	GEM1_PTM_20 : FB_PTM_Agilent;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PTM:30 '}
	GEM1_PTM_30 : FB_PTM_Agilent;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PTM:50 '}
	GEM1_PTM_50 : FB_PTM_Agilent;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:PTM:30 '}
	GEM2_PTM_30 : FB_PTM_Agilent;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:PTM:50 '}
	GEM2_PTM_50 : FB_PTM_Agilent;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:PTM:60 '}
	GEM2_PTM_60 : FB_PTM_Agilent;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:PTM:70 '}
	GEM2_PTM_70 : FB_PTM_Agilent;
	(*Scrool Pumps*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PMF:20 '}
	GEM1_PMF_20 : FB_ScrollPump;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PMF:30 '}
	GEM1_PMF_30 : FB_ScrollPump;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PMF:50 '}
	GEM1_PMF_50 : FB_ScrollPump;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:PMF:30 '}
	GEM2_PMF_30 : FB_ScrollPump;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:PMF:50 '}
	GEM2_PMF_50 : FB_ScrollPump;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:PMF:60 '}
	GEM2_PMF_60 : FB_ScrollPump;
	(*Kashyiama Dry Pumps*)
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PRO:60 '}
	GEM1_PRO_60: FB_KashiyamaPump;
	{attribute 'pytmc' :=' pv: EM1L0:GEM:PRO:70 '}
	GEM1_PRO_70: FB_KashiyamaPump;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:PRO:10 '}
	GEM2_PRO_10: FB_KashiyamaPump;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:PRO:20 '}
	GEM2_PRO_20: FB_KashiyamaPump;
	
	
	(*Pneumatic actuators*)
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:321 '}
	MPA_321: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:322 '}
	MPA_322: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:323 '}
	MPA_323: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:324 '}
	MPA_324: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:325 '}
	MPA_325: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:326 '}
	MPA_326: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:327 '}
	MPA_327: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:328 '}
	MPA_328: FB_MPA;
	{attribute 'pytmc' :=' pv: AT1L0:GAS:MPA:329 '}
	MPA_329: FB_MPA;
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>