<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="PRG_GATT" Id="{f1d0afc8-7bf0-4af8-a68e-a088a19c6a4e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_GATT
VAR

	
	(*needle valve control position*)
	VCN_Req_Pos: REAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Gauges*)
GPI_311();
GBA_311(i_rFULL_SCALE := 2.0 (*Torr*));
GMP_311();

(*Valves*)
(*Gas Cell vent valve*)
VVRC_311 (i_xExtILK_OK:= VGC_391.iq_stValve.i_xClsLS AND DSV_VGC.i_xClsLS AND US_Turbo_Valves_Closed AND DS_Turbo_Valves_Closed AND TwinscrewPumps_Valves_Closed);

(* N2 Cutt off valve*)
VVC_311(i_xExtILK_OK := US_Aperture_Closed AND US_Turbo_Valves_Open AND US_Turbo_Running AND DS_Aperture_Closed AND DS_Turbo_Valves_Open AND US_Turbo_Running AND US_TwinscrewPumps_Valves_Open AND DS_TwinscrewPumps_Valves_Open);

(*flow control valve*)
VCN_311(i_xExtIlkOK:= TRUE,i_ReqPos:= VCN_Req_Pos);

(*Pressure control loop implementation*)
]]></ST>
    </Implementation>
    <LineIds Name="PRG_GATT">
      <LineId Id="5" Count="1" />
      <LineId Id="11" Count="1" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="29" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>