<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="PRG_GEM" Id="{7151a316-9a63-4501-9ce1-47c00a15e083}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_GEM
VAR
	
	(*Pressure Control valve  position*)
	VPC_241_Req_Pos: REAL;
	VPC_242_Req_Pos: REAL;
	
	VPC_361_Req_Pos: REAL;
	VPC_362_Req_Pos: REAL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* GEM 1*)

(*Gauges*)
GEM1_GBA_41(i_rFULL_SCALE := 10.0 (*Torr*));
GEM1_GBA_42(i_rFULL_SCALE := 0.05 (*Torr*));

(* N2 Cut Off Valves *)
VVC_241(i_xExtILK_OK:= US_Aperture_Closed AND US_Turbo_Valves_Open AND US_Turbo_Running); 

(*Flow Control Valves*)
GEM1_VPC_41 (i_xExtIlkOK := TRUE, i_rReqPos:= VPC_241_Req_Pos);
GEM1_VPC_42 (i_xExtIlkOK := TRUE, i_rReqPos:= VPC_242_Req_Pos);


(* GEM 2*)

(*Gauges*)
GEM2_GBA_41(i_rFULL_SCALE := 2.0 (*Torr*));
GEM2_GBA_42(i_rFULL_SCALE := 0.05 (*Torr*));
(* N2 Cut Off Valves *)
VVC_361(i_xExtILK_OK:= DS_Aperture_Closed AND DS_Turbo_Valves_Open AND DS_Turbo_Running); 


(*Flow Control Valves*)
GEM2_VPC_41(i_xExtIlkOK := TRUE, i_rReqPos:= VPC_361_Req_Pos);
GEM2_VPC_42(i_xExtIlkOK := TRUE, i_rReqPos:= VPC_362_Req_Pos);

(*Control Loop to be implemented*)]]></ST>
    </Implementation>
    <LineIds Name="PRG_GEM">
      <LineId Id="5" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="16" Count="0" />
      <LineId Id="34" Count="2" />
      <LineId Id="17" Count="3" />
      <LineId Id="13" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="37" Count="2" />
      <LineId Id="27" Count="2" />
      <LineId Id="26" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>