<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="PRG_ILK" Id="{01cec7ee-0a1e-4d0a-98ae-432579a5cf6a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_ILK
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Evaluate Global Interlokcs*)

TwinscrewPumps_Valves_Closed := GEM1_VRC_60.q_stValve.i_xClsLS AND  GEM1_VRC_70.q_stValve.i_xClsLS AND GEM2_VRC_10.q_stValve.i_xClsLS AND GEM2_VRC_20.q_stValve.i_xClsLS;
US_Turbo_Valves_Closed := GEM1_VRC_10.iq_stValve.i_xClsLS AND  GEM1_VRC_20.iq_stValve.i_xClsLS AND GEM1_VRC_30.iq_stValve.i_xClsLS AND GEM1_VRC_50.iq_stValve.i_xClsLS;
DS_Turbo_Valves_Closed := GEM2_VRC_30.iq_stValve.i_xClsLS AND  GEM2_VRC_50.iq_stValve.i_xClsLS AND GEM2_VRC_60.iq_stValve.i_xClsLS AND GEM2_VRC_70.iq_stValve.i_xClsLS;
US_TwinscrewPumps_Valves_Open := (GEM1_VRC_60.q_stValve.i_xOpnLS AND GEM1_PRO_60.q_stPump.i_xIsRun) OR   (GEM1_VRC_70.q_stValve.i_xOpnLS AND GEM1_PRO_70.q_stPump.i_xIsRun);
DS_TwinscrewPumps_Valves_Open := (GEM2_VRC_10.q_stValve.i_xOpnLS AND GEM2_PRO_10.q_stPump.i_xIsRun) OR   (GEM2_VRC_20.q_stValve.i_xOpnLS AND GEM2_PRO_20.q_stPump.i_xIsRun);
US_Turbo_Valves_Open := GEM1_VRC_10.iq_stValve.i_xOpnLS AND  GEM1_VRC_20.iq_stValve.i_xOpnLS AND GEM1_VRC_30.iq_stValve.i_xOpnLS AND GEM1_VRC_50.iq_stValve.i_xOpnLS;
DS_Turbo_Valves_Open := GEM2_VRC_30.iq_stValve.i_xOpnLS AND  GEM2_VRC_50.iq_stValve.i_xOpnLS AND GEM2_VRC_60.iq_stValve.i_xOpnLS AND GEM2_VRC_70.iq_stValve.i_xOpnLS;
US_Aperture_Closed := GEM1_VGC_10.iq_stValve.i_xClsLS AND GEM1_VGC_20.iq_stValve.i_xClsLS AND GEM1_VGC_30.iq_stValve.i_xClsLS AND GEM1_VGC_40.iq_stValve.i_xClsLS AND GEM1_VGC_50.iq_stValve.i_xClsLS AND GEM1_VGC_60.iq_stValve.i_xClsLS AND GEM1_VGC_70.iq_stValve.i_xClsLS ;
DS_Aperture_Closed := GEM2_VGC_10.iq_stValve.i_xClsLS AND GEM2_VGC_20.iq_stValve.i_xClsLS AND GEM2_VGC_30.iq_stValve.i_xClsLS AND GEM2_VGC_40.iq_stValve.i_xClsLS AND GEM2_VGC_50.iq_stValve.i_xClsLS AND GEM2_VGC_60.iq_stValve.i_xClsLS; ;
US_Turbo_Running := (GEM1_PTM_10.iq_stPtm.eState = pumpRUNNING) AND (GEM1_PTM_20.iq_stPtm.eState = pumpRUNNING) AND (GEM1_PTM_30.iq_stPtm.eState = pumpRUNNING) AND (GEM1_PTM_50.iq_stPtm.eState = pumpRUNNING);
DS_Turbo_Running := (GEM2_PTM_30.iq_stPtm.eState = pumpRUNNING) AND (GEM2_PTM_50.iq_stPtm.eState = pumpRUNNING) AND (GEM2_PTM_60.iq_stPtm.eState = pumpRUNNING) AND (GEM2_PTM_70.iq_stPtm.eState = pumpRUNNING);

xUSAperturesOpnOK := NOT GEM1_VVC_40.iq_stValve.q_xOPN_DO AND NOT GATT_VVC_10.iq_stValve.q_xOPN_DO; 
xDSAperturesOpnOK := NOT GEM2_VVC_40.iq_stValve.q_xOPN_DO AND NOT GATT_VVC_10.iq_stValve.q_xOPN_DO; 

(* Link The correct override bit to the correct vacuum section*)

]]></ST>
    </Implementation>
    <LineIds Name="PRG_ILK">
      <LineId Id="6" Count="14" />
      <LineId Id="5" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>